--- a/DanceCalc/m4d/Views/Song/AdvancedSearchForm.cshtml
+++ b/DanceCalc/m4d/Views/Song/AdvancedSearchForm.cshtml
@@ -174,6 +174,9 @@
                     @SortOrder("Dances", filter.SortOrder, "Dance Rating")
                     @SortOrder("Modified", filter.SortOrder, "Last Modified")
                     @SortOrder("Created", filter.SortOrder, "When Added")
+                    @SortOrder("Energy", filter.SortOrder)
+                    @SortOrder("Mood", filter.SortOrder)
+                    @SortOrder("Beat", filter.SortOrder, "Strength of Beat")
                 </div>
                 <div class="col-sm-offset-2 col-sm-9">
                     <label class="form-inline" style="font-weight:normal; margin-right: 1.5em">
