Move to a more programmable site map

--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -149,38 +149,9 @@
 <div id="info" class="row col-md-12">
     <h2 class="blog"><img src="~/Content/info.png" alt="music" width="48" height="48" />Info</h2>
     <p class="neutral">Are you looking for more information on how music relates to dance? Then please follow our <a href="https://www.music4dance.net/blog">blog</a>.</p>
-    <h4 class="blog">Introducing Music4Dance.Net/Blog</h4>
-    <p class="neutral">I’m an amateur dancer and with some training in music who also happens to be a professional software engineer. I love dancing... <a href="https://www.music4dance.net/blog/hello-world/">[Read more]</a> </p>
-    <h4 class="blog">The Two Questions that Inspired Music4Dance</h4>
-    <p class="neutral">As a beginning ballroom dancer there were two questions that kept coming up... <a href="https://www.music4dance.net/blog/the-two-questions-that-inspired-music4dance/">[Read more]</a> </p>
-    <h4 class="blog">Question 1: I’m learning to Cha Cha, where is some great music for practicing?</h4>
-    <p class="neutral">So how do I do that?  Dance generally co-evolves with music, so to get a very traditional song... <a href="https://www.music4dance.net/blog/question-1-im-learning-to-cha-cha-where-is-some-great-music-for-practicing/">[Read more]</a> </p>
-    <h4 class="blog">Question 2: What dance styles can I dance to my favorite song(s)?</h4>
-    <p class="neutral">One of the things that amazes me about the best dance teachers... <a href="https://www.music4dance.net/blog/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/">[Read more]</a></p>
-    <h4 class="blog">The Pink Martini Solution</h4>
-    <p class="neutral">Not all artists are created equal when it comes to creating dance-able music. For instance... <a href="https://www.music4dance.net/blog/the-pink-martini-solution/">[Read more]</a>
-    <h4 class="blog">Help: How would you group this dance style?</h4>
-    <p class="neutral">One of the fun things about learning more about different dance styles is... <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">[Read more]</a>
-    <h4 class="blog">The “Dancing with the Stars” Solution</h4>
-    <p class="neutral">I learned to dance in part because <a href="http://www.imdb.com/title/tt0092890/?ref_=nv_sr_1"><i>Dirty Dancing</i></a> made me want to be Johnny Castle... <a href="https://www.music4dance.net/blog/the-dancing-with-the-stars-solution/">[Read more]</a></p>
-    <h4 class="blog">Wedding Music Part I: Can we dance the Foxtrot to our song?</h4>
-    <p class="neutral">When did you first learn to dance? For many people it was so that they could dance at their wedding... <a href="https://www.music4dance.net/blog/wedding-music-part-i-can-we-dance-the-foxtrot-to-our-song/">[Read more]</a></p>
-    <h4 class="blog">Wedding Music Part II: We’re learning to Rumba, help us find a good song for our first dance</h4>
-    <p class="neutral">What if you are particularly in love with one dance style or are just learning to dance one particular style and are looking for an inspiring first dance song in that style? <a href="https://www.music4dance.net/blog/wedding-music-part-ii-were-learning-to-rumba-help-us-find-a-good-song-for-our-first-dance/">[Read more]</a></p>
-    <h4 class="blog">I'm a competition ballroom dancer, can I find practice songs that are a specific tempo?</h4>
-    <p class="neutral">The quick answer to this question is yes, definitely!First, many of the songs in our catalog have been tagged with a tempo, so it is easy... <a href="https://www.music4dance.net/blog/im-a-competition-ballroom-dancer-can-i-find-practice-songs-that-are-a-specific-tempo/">[Read more]</a></p>
-    <h4 class="blog">What if I want to build a list of songs that are tagged as either Bolero or Rumba?</h4>
-    <p class="neutral">There are a bunch of different reasons that you might want to build lists of songs that are more sophisticated than just the songs that can be danced to a specific style... <a href="https://www.music4dance.net/blog/what-if-i-want-to-build-a-list-of-songs-that-are-tagged-as-either-bolero-or-rumba/">[Read more]</a></p>
-    <h4 class="blog">Let's tag some songs</h4>
-    <p class="neutral">The tag editor is the first of a number of features that I'm planning that will enable you to customize your music4dance experience... <a href="https://www.music4dance.net/blog/lets-tag-some-songs/">[Read more]</a></p>
-    <h4 class="blog">I am learning the Foxtrot, where can I find some music?</h4>
-    <p class="neutral">The quick answer is to just <a href="https://www.music4dance.net/song/search?dances=FXT">click this link</a> where you will find a list of over a thousand songs... <a href="https://www.music4dance.net/blog/i-am-learning-the-foxtrot-where-can-i-find-some-music/">[Read more]</a></p>
-    <h4 class="blog">Searching for music to dance to just got a whole lot easier</h4>
-    <p class="neutral">I have been adding capabilities to the music4dance advanced search control as they are suggested and as time permits.  And it got a bit out of control, so to speak... <a href="https://www.music4dance.net/blog/searching-for-music-to-dance-to-just-got-a-whole-lot-easier/">[Read more]</a></p>
-    <h4 class="blog">Are there songs that you never want to dance to again?</h4>
-    <p class="neutral">I know for me there are a few songs that I spent way too much time listening to while learning choreography or cutting medleys.  I never want to hear them again... <a href="https://www.music4dance.net/blog/are-there-songs-that-you-never-want-to-dance-to-again/">[Read more]</a></p>
-    <h4 class="blog">Top Songs of 2015 --  And what to dance to them.</h4>
-    <p class="neutral">What better than a top 100 list to end the year? I've taken the <a href="https://open.spotify.com/user/spotifyyearinmusic/playlist/55tXTZZg4Xtk0BA3kPoJ1s">Spotify top 100 songs of 2015 (for the USA)</a> and ... <a href="https://www.music4dance.net/blog/top-songs-of-2015-and-what-to-dance-to-them/">[Read more]</a></p>
-    <h4 class="blog">If you like to dance Cha-Cha to a song does that mean you “like” that song?</h4>
-    <p class="neutral">I wanted to build a system where dancers could vote on... But then Amanda (the music4dance intern) pointed out...<a href="https://www.music4dance.net/blog/if-you-like-to-dance-cha-cha-to-a-song-does-that-mean-you-like-that-song/">[Read more]</a></p>
+    @foreach (var blog in SiteMapInfo.Categories.First(c => c.Name == "Info").Entries.First(e => e.Title == "Blog").Children)
+    {
+        <h4 class="blog">@blog.Title</h4>
+        <p class ="neutral">@Html.Raw(blog.Description) <a href="@blog.FullPath">[Read more]</a></p>
+    }
 </div>
