--- a/DanceCalc/m4d/Views/Song/Dances.cshtml
+++ b/DanceCalc/m4d/Views/Song/Dances.cshtml
@@ -1,16 +1,27 @@
-﻿<div class="panel panel-default">
+﻿@{
+    var isModerator = User.IsInRole("canEdit");
+}
+
+
+<div class="panel panel-default">
     <div class="panel-heading">
         <h3 class="panel-title">Dances</h3>
     </div>
 
     <ul class="panel-body list-group" data-bind="foreach: song.DanceRatings">
         <li class="list-group-item">
+            @if (isModerator)
+            {
+                <a role="button" class="btn btn-small btn-danger" style="padding: 1px 3px 0 3px" data-show="tooltip" data-placement="top" title="Moderator Only: Click to completely remove this dance style and all related tags from this song." data-bind="click:removeDance">
+                    <span class="glyphicon glyphicon-remove-circle"></span>
+                </a>
+            }
             <span class="rating-block" data-show="tooltip" data-placement="top" data-bind="css: Badge, attr: {'data-original-title':tooltip}">
                 <a data-bind="attr: {href: link}, text: DanceName, css:danceTag"></a>
             </span>
             &nbsp;
-            <a role="button" class="btn btn-small btn-info" style="padding:2px" data-show="tooltip" data-placement="top" data-bind="attr: {'data-original-title':liketip},  visible:canTag"><img data-bind="click:toggleVote, attr: {src:voteImage, 'alt':voteName}" /></a>
-            <span style="font-size:18px" data-bind="template: {name:'tag-template',foreach:TagSummary.tagTypes}"></span>
+            <a role="button" class="btn btn-small btn-info" style="padding: 2px" data-show="tooltip" data-placement="top" data-bind="attr: {'data-original-title':liketip},  visible:canTag"><img data-bind="click:toggleVote, attr: {src:voteImage, 'alt':voteName}"/></a>
+            <span style="font-size: 18px" data-bind="template: {name:'tag-template',foreach:TagSummary.tagTypes}"></span>
         </li>
     </ul>
 
