Fixed a couple of stale links (wrt to info that had more appropriate initial links) and added blog posts to the carousel.

--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -379,6 +379,16 @@ a.text-other:hover,
     }
 }
 
+@media (max-width: 992px) {
+    .fun-image {
+        background-image: url(fun-bkg.png);
+        background-size: 400px 400px;
+        background-repeat: no-repeat;
+        background-position: center;
+        min-height:550px;
+    }
+}
+
 @media (max-height: 800px) {
     #banner { display: none;}
 }
